--- a/src/main/resources/templates/shiro/login.html
+++ b/src/main/resources/templates/shiro/login.html
@@ -11,8 +11,8 @@
 <td th:text="${mistake}"></td>
 <hr>
 <form action="/customLogin" method="post">
-    用户名:<input type="text" name="username" value="a"> <br>
-    密  码:<input type="text" name="userPwd" value="a"> <br>
+    用户名:<input type="text" name="username"> <br>
+    密  码:<input type="password" name="userPwd"> <br>
     <input type="submit" value="提交">
 </form>
 </body>
