--- a/src/main/resources/templates/thymeleaf.html
+++ b/src/main/resources/templates/thymeleaf.html
@@ -9,13 +9,13 @@
 <td th:text="${thymeleaf}"></td>
 <hr>
 <div shiro:hasPermission="user:add">
-    <a href="/add">到添加</a>
+    <a href="/toAddUserPage">到添加</a>
 </div>
 <div shiro:hasPermission="user:update">
-    <a href="/update">到修改</a>
+    <a href="/toUpdateUser">到修改</a>
 </div>
 
-
+<a href="/userInfo/userList">全部用户</a>
 
 </body>
 </html>
